HDL-9 HDL-10 HDL-11 done

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
 
         <div class="pr-10 pl-10 lg:pr-32 lg:pl-32 pb-5">
             <div class="flex justify-center p-10">
-                <h1 class="font-bold text-3xl">Huddle App by HelpeerZ</h1>
+                <h1 class="font-bold text-3xl text-center">Huddle App by HelpeerZ</h1>
             </div>
             <div class="flex flex-col justify-center gap-4 lg:flex-row p-10 shadow-2xl">
                 <div class="self-center">
@@ -165,9 +165,11 @@
                 <div class="lg:order-1 flex flex-col gap-4 lg:justify-between items-center pr-10 pl-10">
                     <p class="text-center">HelpeerZ is an ethically designed social networking platform that aims to allow collaboration among various individuals and organizations through project development for personal, academic, career, business, and community growth.</p>
                     <div class=" bg-black text-white w-40 p-4 rounded-sm">
-                        <button class="flex gap-4 font-bold">Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
-                        </svg></button>
+                        <a href="https://www.helpeerz.com/">
+                            <button class="flex gap-4 font-bold">Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                            </svg></button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -176,7 +178,7 @@
         <div class="bg-black text-white pr-10 pl-10 lg:pr-32 lg:pl-32 pb-5 pt-5">
             <div class="flex flex-col gap-10">
                 <div class="flex flex-col items-center gap-4">
-                    <h1 class="font-bold text-3xl">Ready to Revolutionize Your Stand-Ups?</h1>
+                    <h1 class="font-bold text-3xl text-center">Ready to Revolutionize Your Stand-Ups?</h1>
                     <div class="">
                         <button class="default-button font-bold flex items-center justify-center gap-4 h-12 lg:h-16 w-36 lg:w-60">Try Huddle Now!<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:w-8 lg:h-8"> <!-- Adjust button size for smaller devices -->
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
@@ -187,7 +189,7 @@
                 <div class="text-center flex flex-col gap-4">
                     <p>info@helpeerz.com</p>
                     <p>1700 El Camino Real SPC 11-7 South San Francisco CA 94080, USA</p>
-                    <a href="">Terms and Conditions | Privacy Statement</a>
+                    <p><a href="./pages/terms-and-condition.html">Terms and Conditions</a> | <a href="./pages/privacy-notice.html">Privacy Statement</a></p>
                     <p>Copyright © Huddle by HelpeerZ 2024 All Rights Reserved</p>
                 </div>
             </div>
