HDL-39 next and previous button is fixed

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="flex flex-col justify-center">
                 <div class="flex justify-center items-center gap-14">
-                    <div class="page-item">
+                    <div class="page-item absolute md:left-56 left-4">
                         <button class="page-link" onclick="previousImage()" aria-label="Previous">
                             <img src="https://s3-alpha-sig.figma.com/img/f1f6/47ca/66c0d645c817d4171bd874d93f8cef4a?Expires=1714953600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=iWlhXc~2PMbNujew-6Lkj-O5EIPKsD0~4kQHx7RrlD~k5ZCVnDzuRGhpALdGzg~6Kj7NHB~UiEk8OdVpYGkEYHJ5aXEFnU2yc6v5ShfiSqEp0p~SiTp~lZxsDT2g5Eokx3zdCT55o6IQyAemJqaOcCoxXl7xCke5WLb-H95bjXn0QAOKyiQM~pd1tvZeVSoSr2ipasm8OfJpmbofCq8n5yXfeJJi3yQM1d7sls5gvET-fyx~FpcqBGMZPVFtPZ9IberC8yz15l9uvckOzlFd7ByufrQv38GZsA14nv8R9sAN0EZYbRJh6aNNZ903Q1qlFdDemEQ~pkkglFFeJMXqQQ__" alt="" class="h-6">
                         </button>
@@ -139,7 +139,7 @@
                         <img id="teamImage" src="https://s3-alpha-sig.figma.com/img/6e36/8e58/ff0025be11da1a2ff7fd61b8db13098f?Expires=1714348800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=cjwDzXMszfAIiHN3tq5ScWJTilfO~xB27CQZoSqiSTBjgxNFvI7a6E5Pxp3BtYR0Wrt2njpZCa3dW7UGxd52BqOX0Np~CNiFDQoVnDjMkcNJ57njXxta7pBNpOeEB1zGFxAGZ02F4SdjuD7Z747FExTZ1q~0ID7inwIsI~JkpheGWN8uKyQdb~zu8sMW3VKzPnugCZpR9v0WFMm4290MnIQ71Nd0pl7pvP23PYAWC~5yLmmhKNbO2Zyg7xvbmWo93v5lqu5X2BADcQJf5w49lE8piIhy7~HowShtrVabxqxIY3BWTnUlKqXIPpkKLuGF7-dKoI7rr~oJitGEPXYYng__" alt="" class="h-40 sm:h-96">
                     </div>
         
-                    <div class="page-item">
+                    <div class="page-item absolute md:right-56 right-4">
                         <button class="page-link" onclick="nextImage()" aria-label="Next">
                             <img src="https://s3-alpha-sig.figma.com/img/6169/2ecc/f19ceb9fcf44882cd4e18e085f7c15bc?Expires=1714953600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=cJdTmqM5-EX17cuN~iLcHRZ-zjYxGiV4cwfXgTphAGJ40VkcGqMXtKNAOi0TYyKvOzGMCdeKehFn-83kiLWg6kV3VOk98GnLGTiZM6FDa15-EB4i6U4nftr~G8J04NcAmemOVGs-WKolcrHrjg4lAjGnA73r8uQsVuEpPIMMOXzvvNhIsSKWMZCz9bNsdJKaGE~mVKW4G4~m~LeNJKG9U0A8UR7vypDTmvoyWiwEDsm4VwdoT1eStZSwQUnJz9nnEi5LMU62OG4iS9bU5Ihu9rPSSoDVD0GfHSv2KT45WZ2FrLsojbc8UcU3SrA3zdUf1JwyXMFq5ySptv6u9vfBtg__" alt="" class="h-6">
                         </button>
