--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap">
 </head>
 <body class="font-raleway">
-    <div class="navigation">
+    <div class="navigation fixed top-0 w-full z-50">
         <div class="nav">
             <section class="bg-black text-white p-7 flex items-center content-center justify-between pl-10 pr-10 font-raleway">
                 <div class="md:hidden flex items-center">
@@ -69,7 +69,7 @@
     </div>
     <div id="section-container" class="">
 
-        <div class="flex flex-col lg:flex-row p-8 lg:p-32"> 
+        <div class="flex flex-col lg:flex-row p-8 lg:p-32 mt-20"> 
             <div class="lg:w-9/12 lg:mr-4"> 
                 <div class="flex flex-col gap-6">
                     <div>
