HDL-44 shadow in the company section is removed

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
             <div class="flex justify-center p-10">
                 <h1 class="font-bold text-3xl text-center">Huddle App by HelpeerZ</h1>
             </div>
-            <div class="flex flex-col justify-center gap-4 lg:flex-row p-10 shadow-2xl">
+            <div class="flex flex-col justify-center gap-4 lg:flex-row p-10">
                 <div class="self-center">
                     <img src="https://s3-alpha-sig.figma.com/img/cd26/41e6/2739e7c30ea03e855b1844428d2ced50?Expires=1714953600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=jj6gs9r84KU7qaAheg9P53~YDzHuy0X4As~kpmDLEs9bkGHRPHCSGZ14XmmCSSplLV7RGuXmku8p~vzFjnBoEcy27ljAUyETLv1AI178zEwXhRWO4~JUpUxoSuBYDBh~QIDOAP4CZny1KPA1qDm-aGzqmB2vDFrZRc4FZWSPy3rXfw1mz75fggnyqvBqSiI8K1nbgsgUod0f4o17~wqQg8A1GzC0AWanQG4mkkvMiSwTqzrvC5u1PmdS58tPEQOxjuwZrVxO-kWIn-xL5Fb8bbCGfvlBht1b3dreSQFu5u7Ky8fi2FTAo48fDaweJzaWR4q7knkMdOeuilAIgS5wmw__" alt="" class="">
                 </div>
