HDL-45 try huddle now button is fixed

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="">
                         <a href="https://huddle-testing-exim2.ondigitalocean.app/">
-                            <button class="default-button font-bold flex items-center justify-center gap-4 h-12 lg:h-16 w-36 lg:w-60">Try Huddle Now!<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:w-8 lg:h-8">
+                            <button class="whitespace-nowrap default-button font-bold flex items-center justify-center gap-4 h-12 lg:h-16 w-52 lg:w-60">Try Huddle Now!<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:w-8 lg:h-8">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                         </svg></button>
                         </a>
@@ -183,7 +183,7 @@
                     <h1 class="font-bold text-3xl text-center">Ready to Revolutionize Your Stand-Ups?</h1>
                     <div class="">
                         <a href="https://huddle-testing-exim2.ondigitalocean.app/">
-                            <button class="default-button font-bold flex items-center justify-center gap-4 h-12 lg:h-16 w-36 lg:w-60">Try Huddle Now!<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:w-8 lg:h-8">
+                            <button class="whitespace-nowrap  default-button font-bold flex items-center justify-center gap-4 h-10 lg:h-16 w-52 lg:w-60">Try Huddle Now!<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:w-8 lg:h-8">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                         </svg></button>
                         </a>
