--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,7 @@
                 <img src="./img/huddle-removebg-preview.png" alt="" class="h-64">
             </div>
         </div>
-        
-        <div id="features" class="pl-6 pr-6 pt-6 sm:pl-10 sm:pr-6 md:pl-32 md:pr-32">
+        <div id="features" class="pl-6 pr-6 pt-24 sm:pl-10 sm:pr-6 md:pl-32 md:pr-32 sm:pt-28">
             <div>
                 <div class=" flex justify-center pt-4 pb-4">
                     <h1 class="font-bold text-3xl">Why use Huddle?</h1>
@@ -122,7 +121,7 @@
             </div>
         </div>
         
-        <div id="meet-our-team" class=" flex flex-col gap-10 p-6 sm:p-16 md:p-32">
+        <div id="meet-our-team" class=" flex flex-col gap-10 pt-32 p-6 sm:p-16 md:p-32">
             <div class="flex justify-center">
                 <h1 class="font-bold text-3xl">Meet our Team</h1>
             </div>
