change privacy statement to privacy notice

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
                 <div class="text-center flex flex-col gap-4">
                     <p>info@helpeerz.com</p>
                     <p>1700 El Camino Real SPC 11-7 South San Francisco CA 94080, USA</p>
-                    <p><a href="./pages/terms-and-condition.html" class="hover:text-customYellow">Terms and Conditions</a> | <a href="./pages/privacy-notice.html" class="hover:text-customYellow">Privacy Statement</a></p>
+                    <p><a href="./pages/terms-and-condition.html" class="hover:text-customYellow">Terms and Conditions</a> | <a href="./pages/privacy-notice.html" class="hover:text-customYellow">Privacy Notice</a></p>
                     <p>Copyright © Huddle by HelpeerZ 2024 All Rights Reserved</p>
                 </div>
             </div>
