HDL-49 Learn more button is centered with use huddle now btn

--- a/src/index.html
+++ b/src/index.html
@@ -163,14 +163,16 @@
                 <div class="self-center">
                     <img src="https://s3-alpha-sig.figma.com/img/cd26/41e6/2739e7c30ea03e855b1844428d2ced50?Expires=1714953600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=jj6gs9r84KU7qaAheg9P53~YDzHuy0X4As~kpmDLEs9bkGHRPHCSGZ14XmmCSSplLV7RGuXmku8p~vzFjnBoEcy27ljAUyETLv1AI178zEwXhRWO4~JUpUxoSuBYDBh~QIDOAP4CZny1KPA1qDm-aGzqmB2vDFrZRc4FZWSPy3rXfw1mz75fggnyqvBqSiI8K1nbgsgUod0f4o17~wqQg8A1GzC0AWanQG4mkkvMiSwTqzrvC5u1PmdS58tPEQOxjuwZrVxO-kWIn-xL5Fb8bbCGfvlBht1b3dreSQFu5u7Ky8fi2FTAo48fDaweJzaWR4q7knkMdOeuilAIgS5wmw__" alt="" class="">
                 </div>
-                <div class="lg:order-1 flex flex-col gap-4 lg:justify-between items-center pr-2 pl-2 sm:pr-10 sm:pl-10">
+                <div class="lg:order-1 flex flex-col gap-4 lg:justify-between pr-2 pl-2 sm:pr-10 sm:pl-10">
                     <p class="text-center">HelpeerZ is an ethically designed social networking platform that aims to allow collaboration among various individuals and organizations through project development for personal, academic, career, business, and community growth.</p>
-                    <div class=" bg-black text-white w-40 p-4 rounded-md hover:bg-gray-900">
-                        <a href="https://www.helpeerz.com/">
-                            <button class="flex gap-4 font-bold">Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
-                            </svg></button>
-                        </a>
+                    <div class="flex justify-center sm:justify-start sm:pl-80">
+                        <div class=" bg-black text-white w-40 p-4 rounded-md hover:bg-gray-900">
+                            <a href="https://www.helpeerz.com/">
+                                <button class="flex gap-4 font-bold">Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                                </svg></button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
